--- a/resources/css/style-facilities.css
+++ b/resources/css/style-facilities.css
@@ -129,8 +129,6 @@ header nav{
 
 .banners{
     background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
     background-position: center -350px;
     width: 100%;
     height: 100%;
@@ -379,22 +377,25 @@ input[type=submit]:active,
     width: 80%;
     display: block;
     float: left;
-    left: 1.5%;
-    margin:1.6% 8%;
+    left: 10%;
+    margin-top: 1.6%;
+    margin-bottom: 1.6%;
     padding: 0 20px 0 20px+10%;
+    overflow-x: none;
+    margin-left: 0;
 }
 
 .section-facilities h3{
     color: #0379d0;
     text-align: center;
-    font-size: 130%;
+    font-size: 120%;
     text-transform: uppercase;
     margin-bottom: 15px;
     line-height: 1.15;
 }
 
 .section-facilities p{
-    font-size: 110%;
+    font-size: 105%;
     text-align:center;
     line-height: 145%;
     word-spacing: 2px;
@@ -441,7 +442,7 @@ input[type=submit]:active,
 .section-faq i{
       position: absolute;
       transform: translate( -6px , 0 );
-      margin-top: 15px;
+      margin-top: 10px;
       right: 0;
       height: 20px;
         width: 20px;
