--- a/resources/css/queries-form.css
+++ b/resources/css/queries-form.css
@@ -123,14 +123,12 @@
         position: relative;
     }
     
-    header .btn-full:active,
-    header .btn-full:link{
-        margin-left: 17%;
-    }
+    
      
     header .btn-ghost:active,
     header .btn-ghost:link{
-    }
+        margin-right: 20px;
+     }
     .prev, .next {
         top: 40%;
     }
@@ -143,6 +141,11 @@
         padding: 0 3%;
     }
     
+    .prev,
+    .next{
+        display: none;
+        
+    }
     
     /*      P1      */
     
@@ -287,7 +290,6 @@
     .hero-text-box{
         top:60%;
         padding: 0 3%;
-        text-align: center;
     }
     header .btn:link,
     header .btn:active{
