--- a/resources/css/style-facilities.css
+++ b/resources/css/style-facilities.css
@@ -55,6 +55,18 @@ hr{
     background-image: -webkit-gradient(linear, left top, right top, from(rgb(27, 156, 252, 0)), color-stop(rgb(27, 156, 252, 0.75)), to(rgb(27, 156, 252, 0)));
     background-image: linear-gradient(to right, rgb(27, 156, 252, 0), rgb(27, 156, 252, 0.75), rgb(27, 156, 252, 0));
 }
+/*----------------------------------*/
+/*  ICONS */
+/*----------------------------------*/
+
+.icon-big{
+    font-size: 350%;
+    display: block;
+    color: #1b9cfc;
+    margin-bottom: 10px;
+}
+
+
 
 /*----------------------------------*/
 /*  HEADINGS */
@@ -149,6 +161,7 @@ header h3{
   font-weight: bold;
   font-size: 300%;
   transition: 0.6s ease;
+    opacity: 0;
   border-radius: 0 3px 3px 0;
 }
 
@@ -166,12 +179,12 @@ header h3{
 }
 
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+    opacity: 0.8;
 }
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #90cffe;
   border-radius: 50%;
@@ -221,7 +234,7 @@ input[type=submit],
     text-decoration: none;
     font-weight: 300;
     color: #fff;
-    border-radius: 200px;
+    border-radius: 10px;
     border: 1px solid #1B9CFC;
     text-align: center;
     -webkit-transition: border 0.3s, background-color 0.3s, color 0.3s;
@@ -615,10 +628,14 @@ input[type=submit]:active,
 /*----------------------------------*/
 
 .contact-form{
-    width: 60%;
-    margin: 25px auto 0 auto;
+    width: 80%;
+    margin: 25px;
+    text-align: right;
 }
 
+.contact-form .row:nth-of-type(4){
+    text-align: left;
+}
 
 input[type=text],
 input[type=email],
@@ -641,10 +658,26 @@ input[type=submit]{
 *:focus {
     outline: none;
 }
-
-
-
-
+.section-contact .details{
+    padding-right: 30px;
+    text-align: right;
+}
+.span-form{
+    height: 100%;
+    padding-left: 30px;
+    border-left: 1px #ddd dashed;
+}
+.section-contact .icon-big
+{
+    font-size: 300%;
+    display: inline-block;
+    vertical-align: middle;
+}
+.section-contact .span-1-of-3 h3
+{
+    display: inline-block;
+    margin-left: 20px;
+}
 /*----------------------------------*/
 /*  FOOTER  */
 /*----------------------------------*/
@@ -711,9 +744,8 @@ footer row{
 
 footer p{
     color: #888;
-    text-align: center;
+    text-align: right;
     font-size: 110%;
-    margin-top: 15px;
     line-height: 150%;
 }
 
