--- a/resources/css/style-form.css
+++ b/resources/css/style-form.css
@@ -154,6 +154,7 @@ header h3{
   font-size: 300%;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
+    opacity: 0;
 }
 
 .test{
@@ -170,12 +171,12 @@ header h3{
 }
 
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+    opacity: 0.8;
 }
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #90cffe;
   border-radius: 50%;
@@ -224,7 +225,7 @@ header  .fade {
     text-decoration: none;
     font-weight: 300;
     color: #fff;
-    border-radius: 200px;
+    border-radius: 10px;
     border: 1px solid #1B9CFC;
     text-align: center;
     -webkit-transition: border 0.3s, background-color 0.3s, color 0.3s;
@@ -586,9 +587,8 @@ footer row{
 
 footer p{
     color: #888;
-    text-align: center;
+    text-align: right;
     font-size: 110%;
-    margin-top: 15px;
     line-height: 150%;
 }
 
