--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -283,8 +283,13 @@
         margin: 10px auto;
     }
     
+    .section-contact .span-1-of-3{
+        padding-right: 0;
+    }
     .section-contact .span-2-of-3{
         text-align: center;
+        padding-left: 0;
+        border-left: none;
     }
     
     /*      FOOTER      */
