Minor fixed, email address, insta logo

--- a/resources/css/style-facilities.css
+++ b/resources/css/style-facilities.css
@@ -758,7 +758,7 @@ footer p{
 .ion-logo-facebook,
 .ion-logo-twitter,
 .ion-logo-googleplus,
-.ion-logo-isntagram{
+.ion-logo-instagram{
     -webkit-transition: color 0.3s;
     transition: color 0.3s;
 }
