removed .html, added phone number in form

--- a/resources/css/style-form.css
+++ b/resources/css/style-form.css
@@ -519,7 +519,9 @@ header  .fade {
     margin-bottom: 25px;
 }
 
-
+.labels{
+    line-height: 38px;
+}
 
 /*----------------------------------*/
 /*  FOOTER  */
