--- a/resources/css/queries-form.css
+++ b/resources/css/queries-form.css
@@ -60,6 +60,9 @@
         left: 10%;
     }
     
+    .labels{
+        line-height: 37px;
+    }
 }
 
 
@@ -205,6 +208,7 @@
     .p3 input[type=text]{
         margin-bottom: 10px;
     }
+    
     /*      FOOTER      */
     
     
