Made separate header HTML

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,24 +1,6 @@
 /*1200px to 1450px*/
 @media only screen and (max-width: 1450px)
 {   
-    /*      HEADER      */
-    .hero-text-box{
-        position: absolute;
-        padding: 0 6%;
-        left: 0;
-        width: 100%;
-    }
-
-    .hero-text {
-        position: relative;
-        z-index: 0;
-        width: 100%;
-        display: none;
-    }
-    
-    h1{
-        font-size: 190%;
-    }
     /*      WHY US      */
     
     .section-why-us p{
@@ -52,15 +34,6 @@
         margin-bottom: 40px;
     }
     
-    /*      HEADER      */
-    
-    
-    h1{
-        font-size: 200%;
-    }
-    .hero-text-box{
-        padding: 0 10%;
-    }
     
     /*      MISSION      */
     
@@ -142,54 +115,11 @@
     .main-nav{
         margin-top: 25px;
     }
-    
-    /*      HEADER      */
-    
-    .banners{
-        background-position: center;
-        background-attachment: scroll;
+
+    /*      MISSION */
+    .section-mission h3{
+        letter-spacing: 0.2px;
     }
-    
-    .prev,
-    .next{
-        display: none;
-        
-    }
-    header{
-        height: 60vh;
-        min-height: 570px;
-    }
-    .banner-container{
-        height: 60vh;
-        min-height: 570px;
-    }
-    header .btn:link,
-    header .btn:active{
-        margin: 20px auto;
-        position: relative;
-    }
-    
-     
-    header .btn-full:active,
-    header .btn-full:link{
-        margin-right: 20px;
-    }
-    .prev, .next {
-        top: 40%;
-    }
-    .dots{
-        margin-top: -50px;
-    }
-    
-    .hero-text-box{
-        top:60%;
-        padding: 0 3%;
-    }
-    .section-why-us p{
-        width: 90%;
-        margin: auto auto;
-    }
-    
     
     
     /*      FACILITIES      */
@@ -369,26 +299,6 @@
     
     .sticky-nav .mobile-nav-icon {margin: 10px 10px;}
     .sticky-nav .mobile-nav-icon i {color: #555;}
-
-    
-    /*      HEADER      */
-    
-    
-    
-    header .btn-full:active,
-    header .btn-full:link{
-        margin-left: 0;
-    }
-    .hero-text-box{
-        top:60%;
-        padding: 0 3%;
-    }
-    header .btn:link,
-    header .btn:active{
-        width: 120px;
-        padding: 10px 10px;
-    }
-    
     
     
     /*      WHY US      */
